Fixed not showing footer on login

--- a/styles/index.css
+++ b/styles/index.css
@@ -7,6 +7,6 @@
 @media screen and (min-width: 800px) {
   body{
     width: 100vw;
-    overflow: hidden;
+    overflow-x: hidden;
   }
 }
